[package]
name = "git-kickflip"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { version = "0.1.8", features = [ "backtrace" ] }
failure_derive = "0.1.8"
strum_macros = "0.21.1"
structopt = "0.3.23"
rand = "0.8.4"
execute = "0.2.9"